--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 </table>
               </div>
 
+
               <div layout-padding>
                 <md-card-title>
                   <md-card-title-text>
@@ -141,7 +142,6 @@
                   </tr>
                 </table>
               </div>
-
 
               <br />
               <br />
@@ -198,6 +198,10 @@
                 <md-button class="md-fab md-warn  md-hue-2" ng-click="auto()" ng-disabled="mdp==null">{{ autoRunning ? '❚❚' : '►' }}</md-button>
               </div>
 
+              <br />
+              <md-checkbox ng-model="showSolution" aria-label="showSolution">
+                Show Solution Panel
+              </md-checkbox>
 
             </md-card-content>
           </md-card>
@@ -272,7 +276,7 @@
           </md-card>
 
 
-          <md-card>
+          <md-card ng-hide="!showSolution">
             <md-card-content>
 
               <div layout-padding>
@@ -283,8 +287,7 @@
                 </md-card-title>
               </div>
 
-
-              <textarea ng-model="solution" style="width:100%; height:500px;"></textarea>
+              <textarea ng-model="displayingSolution" ng-hide="!showSolution" style="width:100%; height:500px;"></textarea>
             </md-card-content>
           </md-card>
 
