--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>MDP Simulator</title>
   <meta name="author" content="Spicydog Proxy" />
-
+  <meta name="description" content="Markov Decision Process (MDP) Simulator on Web Browser" />
   <meta name="viewport" content="initial-scale=1" />
   <link rel="shortcut icon" href="asset/img/icon.png">
 
