--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>MDP Simulator</title>
   <meta name="author" content="Spicydog Proxy" />
   <meta name="description" content="Markov Decision Process (MDP) Simulator on Web Browser" />
+  <meta name="keywords" content="Markov Decision Process,MDP,XML,Simulator">
+
   <meta name="viewport" content="initial-scale=1" />
+
   <link rel="shortcut icon" href="asset/img/icon.png">
 
   <link rel="stylesheet" href="asset/css/angular-material.min.css">
